--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "dependencies": {
     "@better-fetch/fetch": "^1.1.18",
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.85.6",
-    "@tanstack/react-query-devtools": "^4.40.1",
+    "@tanstack/react-query-devtools": "^5.89.0",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.11.0",
     "better-auth": "^1.3.7",
